syntax="proto3";
import "google/protobuf/timestamp.proto";

option java_package = "main.kotlin.proto";

message Todo2{

        int32 id=1;
        string content=2;
        bool done=3;
        google.protobuf.Timestamp createdAt=4;
        google.protobuf.Timestamp updatedAt=5;
}

message Todo2Array {
    repeated Todo2 Todos = 1;
}